# cookiecutter-flowdapt-plugin

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/: test_stages.py
{{cookiecutter.project_slug}}/workflows/: example_workflow.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: stages.py
